--- a/package.json
+++ b/package.json
@@ -1,38 +1,55 @@
 {
-  "name": "q",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "q",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@react-spring/web": "^9.7.5",
+		"@testing-library/jest-dom": "^5.17.0",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
+		"dom-to-image": "^2.6.0",
+		"framer-motion": "^11.13.1",
+		"html-to-image": "^1.11.11",
+		"html2canvas": "^1.4.1",
+		"html2canvas-pro": "^1.5.8",
+		"lucide-react": "^0.466.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-flip-toolkit": "^7.2.4",
+		"react-icons": "^5.4.0",
+		"react-scripts": "5.0.1",
+		"use-react-screenshot": "^4.0.0",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start --host 0.0.0.0",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"gh-pages": "^6.2.0",
+		"tailwindcss": "^3.4.15"
+	},
+	"homepage": "https://ekzya.github.io/testIQ"
 }
