--- a/package.json
+++ b/package.json
@@ -51,5 +51,5 @@
 		"gh-pages": "^6.2.0",
 		"tailwindcss": "^3.4.15"
 	},
-	"homepage": "https://ekzya.github.io/testIQ"
+	"homepage": "https://ekzya.github.io/IQTest"
 }
